--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ nav{
   justify-content: space-around;
   align-items: center;
   height: 80px;
-  z-index: 10000000;
+  z-index: 1000;
   position: fixed;
   width: 100%;
 
