--- a/style.css
+++ b/style.css
@@ -54,6 +54,147 @@ h2 {
   text-shadow: 1px 1px 1px black;
 }
 
+/* LOADING */
+@keyframes loading {
+  0% {
+    transform: translateX(0)
+  }
+  50% {
+    transform: translateX(100px);
+  }
+  100% {
+    transform: translateX(0)
+  }
+}
+
+@keyframes note-load-1 {
+  0%, 25% {
+    opacity: 0;
+  }
+  25%, 50% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes note-load-2 {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes note-load-3 {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.loader {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-image: var(--gradient);
+  z-index: 10000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  transition: all 2s ease-in-out;
+}
+
+.load-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.loading-message {
+  font-size: 2rem;
+  color: var(--mainAccent);
+}
+
+.trombone-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#loader-body {
+  position: relative;
+}
+
+#loader-slide {
+  position: absolute;
+  left: 95px;
+  top: 27.5px;
+
+  animation: loading 4s ease-in-out infinite;
+}
+
+#music-note-1 {
+  position: absolute;
+  left: 190px;
+  top: 75px;
+  transform: rotate(25deg);
+
+  animation: note-load-1 4s linear infinite
+}
+
+#music-note-2 {
+  position: absolute;
+  left: 230px;
+  top: 55px;
+  transform: rotate(-15deg);
+
+  animation: note-load-2 4s linear infinite
+}
+
+#music-note-3 {
+  position: absolute;
+  left: 270px;
+  top: 65px;
+  transform: rotate(10deg);
+
+  animation: note-load-3 4s linear infinite
+}
+
 /*NAVIGATION*/
 nav{
   display: flex;
