--- a/style.css
+++ b/style.css
@@ -118,17 +118,14 @@ h2 {
   top: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgb(55, 55, 55);
-  /* background-color: white; */
-  /* background-color: var(--mainAccent); */
-  /* background-image: var(--gradient); */
+  background-color: rgb(80, 80, 80);
   z-index: 10000;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  transition: transform 2s ease-in-out;
+  transition: transform 1.5s ease-in-out;
 }
 
 .load-container {
@@ -1221,6 +1218,7 @@ footer .copy{
     z-index: 16;
     pointer-events: auto;
     opacity: 1;
+    padding-bottom: 60px;
   }
 
   /* ABOUT */
