--- a/style.css
+++ b/style.css
@@ -71,49 +71,64 @@ h2 {
   0%{
     opacity: 0;
   }
-  25%{
-    opacity: 0;
-  }
-  30% {
+  5%{
     opacity: 1;
   }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes note-load-2 {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0;
-  }
-  55% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes note-load-3 {
-  0% {
-    opacity: 0;
+  70% {
+    opacity: 1
   }
   75% {
     opacity: 0;
   }
-  80% {
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes note-load-2 {
+  0%{
+    opacity: 0;
+  }
+  20%{
+    opacity: 0;
+  }
+  25% {
     opacity: 1;
   }
-  100% {
+  70% {
     opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes note-load-3 {
+  0%{
+    opacity: 0;
+  }
+  45%{
+    opacity: 0;
+  }
+  50% {
+    opacity: 1
+  }
+  70% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
 .loader {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100vw;
@@ -1075,6 +1090,42 @@ textarea:focus{
   box-shadow: none;
 }
 
+/* MESSAGE SENT PAGE */
+.confirm-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.confirm-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  max-width: 380px;
+  padding: 24px;
+  background: white;
+  color: black;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px 0 black;
+}
+
+.header h1 {
+  margin-bottom: 0;
+}
+
+.body {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+}
+
+.body > span {
+  padding: 10px 0;
+}
 
 /*FOOTER*/
 .footer{
