--- a/style.css
+++ b/style.css
@@ -1370,7 +1370,7 @@ footer .copy{
   }  
 
   .footer-lessons{
-    z-index: 99999999;
+    z-index: 999;
   }
 } 
 
@@ -1499,5 +1499,11 @@ footer .copy{
   
   .copy {
     font-size: .7rem;
+  }
+
+  .rc-andchor-normal {
+    transform: 
+      scale(.8)
+      translate(-40px);
   }
 }
