--- a/style.css
+++ b/style.css
@@ -1501,7 +1501,7 @@ footer .copy{
     font-size: .7rem;
   }
 
-  .rc-andchor-normal {
+  .rc-anchor-normal {
     transform: 
       scale(.8)
       translate(-40px);
