--- a/style.css
+++ b/style.css
@@ -158,14 +158,14 @@ h2 {
 
 .trombone-container {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 350px;
+  height: 250px;
   display: flex;
   justify-content: center;
 }
 
 #loader-body {
-  position: relative;
+  position: absolute;
 }
 
 #loader-slide {
