--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body{
       rgba(0, 0, 0, .3), 
       rgba(0, 0, 0, .3)
     ), 
-    url(../img/TangPortrait-132.jpg);
+    url(./img/TangPortrait-132.jpg);
   background-size: cover;
   background-position: 0% 10%;
 }
@@ -259,6 +259,7 @@ nav{
   height: 30px;
   z-index: 11;
   margin-bottom: 0;
+  padding-right: 20px;
 }
 
 li{
@@ -704,6 +705,91 @@ li{
   width: 48%;
 }
 
+.text-lessons-container {
+  position: relative;
+}
+
+.text-lessons-title {
+  color: white;
+  text-align: center;
+}
+
+.phone-display-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.phone {
+  z-index: 1;
+  margin-top: -50px;
+  margin-bottom: -50px;
+}
+
+.phone-background-container {
+  height: 450px;
+  width: 225px;
+  position: absolute;
+  top: 150px;
+  transform: translateX(2px);
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-lessons-information {
+  position: absolute;
+  background-color: rgba(212, 212, 212, 0.9);
+  border-radius: 20px;
+  width: 90%;
+  height: 80%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.text-lessons-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.text-lessons-header-profile {
+  display: flex;
+}
+
+.text-lessons-header-profile img {
+  margin-right: 7px;
+}
+
+.text-lessons-header {
+  color: black;
+  font-size: 12px
+}
+
+.text-lessons-body,
+.text-lessons-body div ul li {
+  color: black;
+  font-size: 11px;
+}
+
+.tiers {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.tiers p {
+  margin-bottom: 0;
+}
+
+.phone-background {
+  position: absolute;
+  z-index: -10;
+}
+
 .text-lessons {
   margin-top: 0;
 }
@@ -772,7 +858,7 @@ li{
   margin-bottom: 10px;
 }
 
-.video-card h3, h5, p{
+.video-card h3, .video-card h5, .video-card p{
   color: white;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -1177,6 +1263,10 @@ hr {
   max-width: 360px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.form p {
+  color: white;
 }
 
 input{
